--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -18,40 +18,28 @@
 
         <TextView
             android:id="@+id/tv_quiz"
-            android:layout_width="270dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="275dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="76dp"
+            android:layout_marginEnd="70dp"
             android:gravity="center"
             android:text="@{viewModel1.str1.toString()}"
             android:textColor="@color/black"
             android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_cheat"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.517"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <Button
-            android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="80dp"
-            android:gravity="center"
-            android:text="Next"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/btn_false"
-            app:layout_constraintTop_toBottomOf="@+id/btn_cheat" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="26dp"
             android:text="Prev"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_next"
-            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_cheat" />
 
@@ -59,37 +47,48 @@
             android:id="@+id/btn_cheat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="1dp"
-            android:layout_marginBottom="102dp"
             android:text="Cheat"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_false"
+            app:layout_constraintTop_toBottomOf="@+id/btn_false"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/btn_false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="68dp"
             android:tag="false"
             android:text="False"
-            app:layout_constraintBottom_toTopOf="@+id/btn_cheat"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_quiz"
-            app:layout_constraintVertical_bias="0.972" />
+            app:layout_constraintStart_toEndOf="@+id/btn_true"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="11dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginBottom="6dp"
             android:tag="true"
             android:text="True"
             app:layout_constraintBottom_toTopOf="@+id/btn_cheat"
             app:layout_constraintEnd_toStartOf="@+id/btn_false"
-            app:layout_constraintHorizontal_bias="0.509"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_quiz"
-            app:layout_constraintVertical_bias="0.948" />
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="2dp"
+            android:gravity="center"
+            android:text="Next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_prev"
+            app:layout_constraintTop_toBottomOf="@+id/btn_cheat" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
